next_cloud/04.mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: cloud
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels: 
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        - name: mariadb-config
          mountPath: /etc/mysql/conf.d
      volumes:
      - name:  mariadb-config
        configMap:
          name: mariadb-config
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: cloud
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None  # ==> Headless
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-lb
  namespace: cloud
spec:
  type: LoadBalancer  
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
