next_cloud/05.nextcloud.yaml
#
# Nextcloud deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1002
        fsGroup: 1002
      containers:
      - name: nextcloud
        image: nextcloud:production-apache
        securityContext:
          runAsUser: 1000
          runAsGroup: 1002     
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: nextcloud-html
          mountPath: /var/www/html  
        - name: nextcloud-data
          mountPath: /var/www/html/data
          subPath: data
        - name: nextcloud-data
          mountPath: /var/www/html/custom_apps
          subPath: custom_apps
        - name: nextcloud-data
          mountPath: /var/www/html/themes
          subPath: themes
        - name: nextcloud-data
          mountPath: /var/www/html/config
          subPath: config
        - name: nextcloud-custom-config
          mountPath: /var/www/html/config/custom.config.php
          subPath: custom.config.php
        - name: nextcloud-tmp
          mountPath: /tmp
      volumes:
      - name: nextcloud-html
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nas-cloud-data-pvc
      - name: nextcloud-custom-config
        configMap:
          name: nextcloud-config
          defaultMode: 0644
      - name: nextcloud-tmp
        emptyDir:
          sizeLimit: "10Gi"
---
#
# Service for loadbalancer
#
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: cloud
  labels:
    app: nextcloud
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
