next_cloud/07.nextcloud_collabora.yaml
#
# NextCloud Collabora
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
      - name: collabora
        image: collabora/code:latest 
        ports:
        - containerPort: 9980
          name: http
        - containerPort: 443
          name: https
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SYS_ADMIN
            - FOWNER
            - SYS_CHROOT
            - MKNOD
            - SETPCAP
          privileged: false 
        volumeMounts:
        - name: collabora-config
          mountPath: /etc/coolwsd
          # subPath: coolwsd.xml
      volumes:
      - name: collabora-config
        configMap:
          name: collabora-coolwsd-config
      - name: coolwsd-base-dir
        emptyDir: {}
---
#
# Collabora service
#
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: cloud
spec:
  type: LoadBalancer
  selector:
    app: collabora
  ports:
    - name: http
      protocol: TCP
      port: 9980
      targetPort: 9980
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
