next_cloud/06.traefik_ingressRoute.yaml
#
# Middleware for redirecting
#
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: streaming
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
#
# HTTP Ingress routes for cloud
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloud-http-ingressroutes
  namespace: cloud
spec:
  entryPoints:
    - web
    - websecure
  routes:
    # next cloud
    - match: Host(`nextcloud.home.net`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: nextcloud
          port: 80
          namespace: cloud
    # Collabora
    - match: Host(`collabora.home.net`)
      kind: Rule
      services:
        - name: collabora
          port: 9980
          namespace: cloud
    # maria db
    - match: Host(`mariadb.home.net`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: mariadb-lb
          port: 3306
          namespace: cloud
---
#
# HTTPS Ingress routes for cloud
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloud-https-ingressroutes
  namespace: cloud
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-tls
  routes:
    # next cloud
    - match: Host(`nextcloud.home.net`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
          namespace: cloud
    # Collabora
    - match: Host(`collabora.home.net`)
      kind: Rule
      services:
        - name: collabora
          port: 9980
          namespace: cloud
    # maria db
    - match: Host(`mariadb.home.net`)
      kind: Rule
      services:
        - name: mariadb-lb
          port: 3306
          namespace: cloud
